--- a/javascript/core/sparkplug-client/package.json
+++ b/javascript/core/sparkplug-client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sparkplug-client",
-  "version": "3.2.4",
+  "name": "@bromptonenergy/sparkplug-client",
+  "version": "3.2.5",
   "description": "A client module for MQTT communication using the Sparkplug specification from Cirrus Link Solutions",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eclipse/tahu.git"
+    "url": "git+https://github.com/bromptonenergy/tahu.git"
   },
   "keywords": [
     "tahu",
@@ -20,9 +20,9 @@
   "author": "Chad Kienle <chad.kienle@cirrus-link.com> (http://www.cirrus-link.com)",
   "license": "EPL-2.0",
   "bugs": {
-    "url": "https://github.com/eclipse/tahu/issues"
+    "url": "https://github.com/bromptonenergy/tahu/issues"
   },
-  "homepage": "https://github.com/eclipse/tahu",
+  "homepage": "https://github.com/bromptonenergy/tahu",
   "files": [
     "index.js",
     "index.js.map",
