--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,9 +15,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: cd ./javascript/core/sparkplug-client
-      - run: npm ci
-      - run: npm test
+      - working-directory: ./javascript/core/sparkplug-client
+        run: npm ci
+      - working-directory: ./javascript/core/sparkplug-client
+        run: npm test
 
   publish-gpr:
     needs: build
@@ -31,8 +32,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - run: cd ./javascript/core/sparkplug-client
-      - run: npm ci
-      - run: npm publish
+      - working-directory: ./javascript/core/sparkplug-client
+        run: npm ci
+      - working-directory: ./javascript/core/sparkplug-client
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
